// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyBathroomsFilterViewMapControl renders correctly when collapsed 1`] = `
<div class="layer-container">
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Query listings with current number of bathrooms filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyBathroomsFilterViewMapControl renders correctly when expanded 1`] = `
<div class="layer-container">
  <button title="Show number of bathrooms filter control">
    2
    <svg aria-hidden="true" class="svg-inline--fa fa-bath fa-w-16" data-icon="bath" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M32,384a95.4,95.4,0,0,0,32,71.09V496a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V480H384v16a16,16,0,0,0,16,16h32a16,16,0,0,0,16-16V455.09A95.4,95.4,0,0,0,480,384V336H32ZM496,256H80V69.25a21.26,21.26,0,0,1,36.28-15l19.27,19.26c-13.13,29.88-7.61,59.11,8.62,79.73l-.17.17A16,16,0,0,0,144,176l11.31,11.31a16,16,0,0,0,22.63,0L283.31,81.94a16,16,0,0,0,0-22.63L272,48a16,16,0,0,0-22.62,0l-.17.17c-20.62-16.23-49.83-21.75-79.73-8.62L150.22,20.28A69.25,69.25,0,0,0,32,69.25V256H16A16,16,0,0,0,0,272v16a16,16,0,0,0,16,16H496a16,16,0,0,0,16-16V272A16,16,0,0,0,496,256Z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Query listings with current number of bathrooms filter">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <div class="layer-options expanded">
    <div class="vue-slider vue-slider-ltr" style="padding: 7px 0px; width: auto; height: 4px;">
      <div class="vue-slider-rail">
        <div class="vue-slider-process" style="height: 100%; top: 0px; left: 0%; width: 20%; transition-property: width,left; transition-duration: 0.5s;"></div>
        <div class="vue-slider-marks">
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 0%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">1</div>
          </div>
          <div class="vue-slider-mark vue-slider-mark-active" style="height: 100%; width: 4px; left: 20%;">
            <div class="vue-slider-mark-step vue-slider-mark-step-active"></div>
            <div class="vue-slider-mark-label vue-slider-mark-label-active">2</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 40%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">3</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 60%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">4</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 80%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">5</div>
          </div>
          <div class="vue-slider-mark" style="height: 100%; width: 4px; left: 100%;">
            <div class="vue-slider-mark-step"></div>
            <div class="vue-slider-mark-label">6</div>
          </div>
        </div>
        <div aria-orientation="horizontal" aria-valuemax="6" aria-valuemin="1" aria-valuenow="2" aria-valuetext="2" class="vue-slider-dot" role="slider" style="width: 14px; height: 14px; transform: translate(-50%, -50%); top: 50%; left: 20%; transition: left 0.5s;" tabindex="0">
          <div class="vue-slider-dot-handle"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
